# faithfull-nlg

./: .gitignore  README.md  calculate_metrics_for_addition.sh  calculate_metrics_for_deletion.sh  calculate_metrics_for_severities.sh  eval_error_add_critical.sh  eval_error_add_random.sh  eval_error_delete.sh  eval_error_impact.sh  eval_severities.sh  plot_add.sh  plot_delete.sh  plot_severities.sh  pyproject.toml  results_merge.sh  run_calculate_metrics.sh  run_calculate_metrics_for_addition.sh  run_calculate_metrics_for_deletion.sh  run_calculate_plots.sh  run_eval.sh  run_eval_add_critical_vllm.sh  run_eval_all_severities.sh  run_eval_error_add_random_vllm.sh  run_eval_error_delete.sh  run_eval_error_delete_vllm.sh  run_eval_error_impact.sh  run_eval_error_impact_vllm.sh  run_eval_gemma_pregen.sh  run_eval_impact.sh  run_eval_nemo_pregen.sh  run_eval_peturbed.sh  run_eval_pregen.sh  run_eval_severities.sh  run_eval_severities_vllm.sh  run_eval_severity.sh  run_eval_single_severity.sh  run_peturb_dataset.sh
data/meta_eval/: hanna.json  qags.json
src/: calculate_correlation.py  calculate_error.py  calculate_error_deletion.py  calculate_metric.py  calculate_plots.py  calculate_plots2.py  calculate_plots3.py  copy_results_to_pregen.py  copy_to_pregen_results.py  dataset.py  eval_mod.py  eval_mod_impact.py  eval_mod_per_error.py  eval_mod_per_error_vllm.py  eval_mod_vllm.py  eval_on_pregen.py  eval_zero_shot.py  evaluate_program.py  idea_trainer.py  mods.py  mods_vllm.py  perturb_dataset.py  run_evaluation_model.py  run_ollama.py  show_result.py  test_eng.py
(+462 files in other folders)
