[project]
name = "ollama-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "ollama>=0.5.1",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "vllm>=0.9.2",
]
